fix ao cards dark mode chips

--- a/src/app/pages/workouts/workouts.page.scss
+++ b/src/app/pages/workouts/workouts.page.scss
@@ -30,7 +30,12 @@ iframe {
       font-weight: bold;
     }
 
-    ion-chip,
+    ion-chip {
+      pointer-events: none;
+      background: #444;
+      color: #f4f5f8;
+    }
+
     a.readonly {
       pointer-events: none;
     }
